2012-11-04  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c (ReadOnePNGImage): Let libpng unpack all sub-8-bit
	pixels (see change of 2012-08-31 which lets libpng unpack sub-8-bit
	palette images; this also lets libpng unpack the grayscale images).

	* coders/png.c (ReadOnePNGImage): Corrected the reading of interlaced
	images (see SourceForge bug 3420695, in which all passes are
	displayed in a garbled manner instead of only the completed image).

2012-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImagePage): Need to use 'image'
	rather than 'images' in order to work with iterator.
	(MagickSetImagePage): Need to use 'image'
	rather than 'images' in order to work with iterator.

2012-10-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (TranslateTextEx): Fix bug with input string
	read overrun if the input string ends with a single '%'.  This
	sometimes caused random heap data to be added to the output string
	until another null character is reached.  A simple work-around
	without this fix is to use "%%" rather than "%".  Fixes
	SourceForge bug 3580219 "strange results with '%' in Annotate()".

2012-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetImagePage): New method to support
	setting the image page size and offsets.
	(MagickGetImagePage): New method to support getting image page
	size and offsets.

2012-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Report fatal error if doing modules build and
	libltdl is not found.

2012-10-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl: Libltdl is no longer bundled.  Libltdl must be previously
	installed on the system in order to build the modules
	configuration.

2012-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update top index page for 1.3.17 release.

	* NEWS.txt: Update NEWS for 1.3.17 release.
